# cmake-is-life

./: CMakeLists.txt  README.md
src/: main.c
